// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigatorContent /> should render the logo 1`] = `
<div>
  <NavigatorLogo
    action="POP"
    historyLength={1}
    logoUrl={null}
    submitSearch={[Function]}
    title="My Title"
  />
  <NavigatorSearch
    action="POP"
    active={false}
    getQueryParam={[Function]}
    historyLength={1}
    placeholder="Search"
    searchPhrase=""
    setSearchPhrase={[Function]}
    submitSearch={[Function]}
    title="My Title"
    toggleSearch={[Function]}
  />
</div>
`;

exports[`<NavigatorContent /> should render the title 1`] = `
<div>
  <NavigatorTitle
    action="POP"
    historyLength={1}
    onClick={[Function]}
    submitSearch={[Function]}
    title="My Title"
  />
  <NavigatorSearch
    action="POP"
    active={false}
    getQueryParam={[Function]}
    historyLength={1}
    placeholder="Search"
    searchPhrase=""
    setSearchPhrase={[Function]}
    submitSearch={[Function]}
    title="My Title"
    toggleSearch={[Function]}
  />
</div>
`;
